src/main/resources/static/assets/css/index.css
/*Global Variables*/
:root {
    --item-width: 40%;
    --item-separation: 0px;
    --viewer-distance: 500px;
}
/*Background for loading div*/
.normal-bg {
    background-color: #8096AD;
}

/*Loading image div wrapper styling*/
#loading-div {
    position: absolute;
    height: 100vw;
    width: 100vw;
}
/*Styling for loading image*/
#loading-img {
    height: 100px;
    width: 100px;
    position: absolute;
    top: 20em;
}
/*Styling to spin our loading image*/
@keyframes spinning {
    from { transform: rotate(0deg) }
    to { transform: rotate(360deg) }
}
.spin {
    animation-name: spinning;
    animation-duration: 1.2s;
    animation-iteration-count: infinite;
    animation-timing-function: ease-in-out;
}

/*Carousel styling*/
.carousel {
    padding: 20px;

    perspective: var(--viewer-distance);
    overflow: hidden;

    display: flex;
    flex-direction: column;
    align-items: center;
}
.carousel > * {
    flex: 0 0 auto;
}
/*Carousel image styling*/
.carousel img {
    height: 429px;
    width: 100%;
    border-radius: 1em;
}
/*Carousel container styling*/
.carousel figure {
    margin: 0;
    width: 420px;
    transform-style: preserve-3d;
    transition: transform 1s;
}
/*Carousel image wrapper styling*/
.carousel figure div {
    width: 100%;
    box-sizing: border-box;
}
/*Carousel styling for anything not the main image*/
.carousel figure div:not(:first-of-type) {
     position: absolute;
     left: 0;
     top: 0;
}
/*Carousel nav styling*/
carousel nav {
    display: flex;
    justify-content: center;
    margin: 20px 0 0;
}
/*Hiding carousel buttons*/
.carousel nav button {
    display: none;
}

